ottrbox/ottrbox-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ottrbox
  namespace: weblio
  labels:
    app.kubernetes.io/name: ottrbox
    app.kubernetes.io/component: file-management
    app.kubernetes.io/managed-by: argocd
spec:
  selector:
    app.kubernetes.io/name: ottrbox
    app.kubernetes.io/component: file-management
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
