ottrbox/ottrbox-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ottrbox
  namespace: weblio
  labels:
    app.kubernetes.io/name: ottrbox
    app.kubernetes.io/component: file-management
    app.kubernetes.io/managed-by: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`share.weblio.se`)
      kind: Rule
      services:
        - name: ottrbox
          port: 3000
  tls:
    certResolver: weblio-letsencrypt-http
